--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 node_modules
-/.pnp
-.pnp.js
 
 # testing
 /coverage
@@ -13,13 +9,12 @@ build
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+npm-debug.log*\
 landofgaia-workspace.code-workspace
 .vscode/settings.json
