--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Land of Gaia",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch backend --exec node --experimental-modules backend/server.js"
+    "start": "node --experimental-modules backend/server.js"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,6 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "nodemon": "^2.0.12"
+    "eslint": "^7.32.0"
   }
 }
