Add author name to package.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/Gram-Stone/landofgaia.git"
   },
-  "author": "",
+  "author": "Gram Stone",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Gram-Stone/landofgaia/issues"
